--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,102 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 @keyframes slideLeft {
-    0% {
-      transform: translateX(0%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(-50%);
-      opacity: 1;
-    }
+  0% {
+    transform: translateX(0%);
+    opacity: 0;
   }
-  
-  @keyframes slideDown {
-    0% {
-      transform: translateY(-50%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0%);
-      opacity: 1;
-      color: teal;
-    }
+  100% {
+    transform: translateX(-50%);
+    opacity: 1;
   }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-50%);
+    opacity: 0;
   }
-  
-  .home {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #000;
-    padding: 100px 0;
-    overflow: hidden;
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+    color: teal;
   }
-  
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    margin: 0 auto;
-    color: #f5f5f5;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  .profile-pic-wrapper {
-    flex: 1;
-    text-align: right;
+  to {
+    opacity: 1;
   }
-  
-  .profile-pic {
-    height: 250px;
-    width: 250px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 5px solid teal;
-    box-shadow: 0 0 20px rgba(139, 233, 253, 0.5);
-    animation: slideLeft 2s ease-in-out forwards, fadeIn 2s ease-in-out forwards;
-  }
-  
-  .text-wrapper {
-    flex: 2;
-    padding-left: 20px;
-    max-width: 60%;
-  }
-  
-  .name {
-    font-family: 'mulish', sans-serif;
-    font-size: 3em;
-    margin-bottom: 10px;
-    animation: slideDown 2s ease-in-out forwards, fadeIn 2s ease-in-out 0.5s forwards;
-  }
-  
-  .typing p {
-    font-family: "Courier", monospace;
-    font-size: 1.2em;
-    word-wrap: break-word;
-  }
-  .download-resume-btn {
-    display: inline-block;
-    padding: 10px 20px;
-    margin-top: 20px;
-    background-color: teal; /* Button background color */
-    color: #fff; /* Button text color */
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-  }
-  
-  .download-resume-btn:hover {
-    background-color: #00796b; /* Darker teal on hover */
-    cursor: pointer;
-  }
+}
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #000;
+  padding: 100px 0;
+  overflow: hidden;
+}
+
+.profile-pic-wrapper {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.profile-pic {
+  border-radius: 50%;
+  object-fit: cover;
+  border: 5px solid teal;
+  box-shadow: 0 0 20px rgba(139, 233, 253, 0.5);
+  animation: slideLeft 2s ease-in-out forwards, fadeIn 2s ease-in-out forwards;
+}
+
+.text-wrapper {
+  text-align: center;
+  max-width: 100%;
+}
+
+.name {
+  font-family: 'mulish', sans-serif;
+  font-size: 3em;
+  margin-bottom: 10px;
+  animation: slideDown 2s ease-in-out forwards, fadeIn 2s ease-in-out 0.5s forwards;
+}
+
+.typing p {
+  font-family: "Courier", monospace;
+  font-size: 1.2em;
+  word-wrap: break-word;
+}
+
+.download-resume-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 20px;
+  background-color: teal; /* Button background color */
+  color: #fff; /* Button text color */
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.download-resume-btn:hover {
+  background-color: #00796b; /* Darker teal on hover */
+  cursor: pointer;
+}
