--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -45,10 +45,15 @@
 .profile-pic-wrapper {
   text-align: center;
   margin-bottom: 20px;
+  height: 300px;
+  width: 300px;
 }
 
 .profile-pic {
   border-radius: 50%;
+  margin-left: 76px;
+  height: 300px;
+  width: 300px;
   object-fit: cover;
   border: 5px solid teal;
   box-shadow: 0 0 20px rgba(139, 233, 253, 0.5);
