--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -79,6 +79,7 @@
 }
 
 .download-resume-btn {
+  font-family: 'Mulish', sans-serif;
   display: inline-block;
   padding: 10px 20px;
   margin-top: 20px;
@@ -94,4 +95,8 @@
 .download-resume-btn:hover {
   background-color: #00796b; /* Darker teal on hover */
   cursor: pointer;
+  text-decoration: none;
+}
+a{
+  text-decoration: none;
 }
