--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: #000;
+  background-blend-mode: multiply;
   color: #f5f5f5;
 }
 
